<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/greyTransparent"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"
                    android:text="@string/account"
                    android:textColor="@color/black"
                    android:layout_weight="2" />

                <ImageView
                    android:id="@+id/closeSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close_black_24dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/username"
                    android:textColor="@color/black"
                    android:drawableRight="@drawable/ic_credit_card_black_24dp"
                    android:background="@drawable/element_outline"/>

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/name"
                    android:textColor="@color/black"
                    android:drawableRight="@drawable/ic_person_pin_black_24dp"
                    android:background="@drawable/element_outline"/>

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:drawableRight="@drawable/ic_mail_outline_black_24dp"
                    android:background="@drawable/element_outline"/>

                <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/password"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:drawableRight="@drawable/ic_lock_outline_black_24dp"
                    android:background="@drawable/element_outline"/>

                <Button
                    android:id="@+id/SignupBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/join"
                    android:textColor="@color/white"
                    android:background="@drawable/button_black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/offBlack"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/use"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/google"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp"/>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/facebook"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp"/>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/twitter"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/loginText"
                android:textStyle="italic|bold"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/offBlack"
                android:text="@string/terms"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>